--- a/styles.css
+++ b/styles.css
@@ -209,7 +209,7 @@ nav ul li a:hover {
     font-size: 2.8rem;
     margin-bottom: 50px;
     color: white; /* Stand out on gradient */
-    text-transform: uppercase;
+    text-transform: capitalize;
     letter-spacing: 1.5px;
 }
 
